--- a/views/test.ejs
+++ b/views/test.ejs
@@ -11,7 +11,7 @@
 
 <body>
     <script>
-        let a = 'a'
+        let b = 'b'
     </script>
     <script src="./js/jquery.js"></script>
     <script src="/test1.js"></script>
